# password-manager-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  add_password_dialog.cpp  add_password_dialog.h  encryption.cpp  encryption.h  file_handler.cpp  file_handler.h  login_dialog.cpp  login_dialog.h  main.cpp  main_window.cpp  main_window.h  password_manager.cpp  password_manager.h  password_manager.pro
